# PyAlgo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: mypy.yaml
src/graph/: bfs_edge.py  bfs_square.py  dfs_square.py
src/search/: binary_search.py
src/sort/: quick_sort.py
