[tool.poetry]
name = "pyalgo"
version = "0.1.0"
description = "algorithm and data structure written in python"
authors = ["yiskw713 <i.yuchi713@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
isort = "^5.8.0"
flake8 = "^3.9.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
